# kilight-client

./: README.md  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: python-publish.yml
scripts/: create-release.sh
src/kilight/client/: __init__.py  connector.py  const.py  device.py  models.py
tests/kilight/client/: conftest.py  test_connector.py  test_device.py
