[project]
name = "kilight_client"
authors = [
    {name = "Patrick Lavigne", email = "me@patrick.codes"},
]
description = "Client library for communicating with KiLight devices."
requires-python = ">= 3.12"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Home Automation",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console"
]
dependencies = [
    "protobuf>=5.27.1,<6"
]
dynamic = ["version", "readme"]

[project.urls]
repository = "https://github.com/PMLavigne/kilight_client"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "grpcio-tools"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "kilight.client.__version__"}
readme = {file = ["README.md"]}

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = 1
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_default_fixture_loop_scope = "function"